# Tenderer

./: .gitignore  CMakeLists.txt  compile_commands.json  out.txt  runner.sh
.cache/clangd/index/: Application.cpp.23BF3C3EEF817D1E.idx  Application.cpp.74801CA16045E17B.idx  Application.h.48CB6D7F5213E411.idx  Application.h.FB2CBCDCF80CE77B.idx  Buffer.cpp.7290BE794A3C66EE.idx  Buffer.h.68FDF4DF4F5AE7EE.idx  Renderer.cpp.A17CEBAB1F1F008C.idx  Renderer.cpp.CFFCB94C5B8F2D45.idx  Renderer.cpp.F14CA0C7453B29E3.idx  Renderer.h.47E178D8DAD44746.idx  Renderer.h.D591C03CC81F08BB.idx  Renderer.h.E62BD4F34C0BC115.idx  Terminal.cpp.7BFFBB83FF4C31AB.idx  Terminal.cpp.DCE0D9B633B21056.idx  Terminal.h.8023FD79ADCE352F.idx  Terminal.h.ACA4998DF9DA17BC.idx  WRenderer.cpp.50EFC9D3701C4E68.idx  WRenderer.h.CA165DB007408AF5.idx  _fixes.hpp.04D0FDB203681E7E.idx  _vectorize.hpp.8A43FB38184AC4B4.idx  app.cpp.03097274C90F14B6.idx  app.cpp.AEDB402F4DCC2DDA.idx  common.hpp.BDE4F6D4EDE542DF.idx  compute_common.hpp.96D2FCDD68B0EED4.idx  compute_vector_relational.hpp.3BBD1E2E046E6920.idx  constants.hpp.431A9D10ECEED80C.idx  constants.inl.55A01E99E5E83C07.idx  exponential.hpp.2F55B017500B89DC.idx  func_common.inl.850CEC8774E8B21D.idx  func_exponential.inl.0262756DB7FDAF10.idx  func_geometric.inl.DA638056364049D9.idx  func_integer.inl.41620ABED13739E5.idx  (+135 more)
Sandbox/: app.cpp
Tenderer/src/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Terminal.cpp  Terminal.h
(+4 files in other folders)
